[package]
name = "ethscan-sc-downloader"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
dirs = "5.0.1"
env_logger = "0.11.5"
foundry-block-explorers = "0.9.0"
hyper = "1.5.2"
log = "0.4.22"
reqwest = "0.12.9"
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["full"] }
toml = "0.8.19"
walkdir = "2.5.0"
