[package]
name = "scpull"
version = "0.1.0"
authors = ["nuntax"]
license = "MIT"
description = "Pulls a smart contract via etherscan and initializes a new foundry project for it."
readme = "README.md"
repository = "https://github.com/nuntax/ScPull"
homepage = "https://github.com/nuntax/ScPull"
keywords = ["foundry", "blockchain", "cli"]
categories = ["blockchain", "development-tools"]
edition = "2021"
[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
dirs = "5.0.1"
env_logger = "0.11.5"
foundry-block-explorers = "0.9.0"
hyper = "1.5.2"
log = "0.4.22"
reqwest = "0.12.9"
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["full"] }
toml = "0.8.19"
walkdir = "2.5.0"
